--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="api.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyCK_wbhnDcnLHK5w3NObHS8lOREYIojAvM",
+        authDomain: "stack-active-server.firebaseapp.com",
+        databaseURL: "https://stack-active-server.firebaseio.com",
+        projectId: "stack-active-server",
+        storageBucket: "stack-active-server.appspot.com",
+        messagingSenderId: "171921126167"
+      };
+      firebase.initializeApp(config);
+    </script>
+    
     <script src="./dist/build.js"></script>
   </body>
 </html>
